# Octane_Hexapods

./: .gitignore  .gitmodules  README.md
le_potato/: IK.py  README.md  actuator_kinematics.py  controller_test.py  i2c_test.py  main.py  precomputed_trajectories.py
pico/i2c_transmitter/: CMakeLists.txt  i2c_transmitter.c
pico/leg_controller/: CMakeLists.txt  README.md  leg_controller.c  pico_sdk_import.cmake
pico/leg_controller/PID/: CMakeLists.txt  PID.c
pico/leg_controller/actuator_kinematics/: CMakeLists.txt
pico/leg_controller/encoder/: CMakeLists.txt  encoder.c
pico/leg_controller/motor_driver/: CMakeLists.txt  motor_driver.c
pico/leg_controller/stepper_driver/: CMakeLists.txt  stepper.c  stepper.pio  stepper_driver.c  stepper_driver.pio
pico/leg_controller/trajectories/: CMakeLists.txt  backward.c  forward.c  left.c  right.c
